syntax = "proto3";

package userpb;

import "google/protobuf/timestamp.proto";

option go_package = "./userpb";

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string role = 4;
  string status = 5;
}

message GetDetailUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  string status = 5;
}

message UpdateUserRequest {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string status = 6;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  GetUserResponse data = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message GetAllUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllUsersResponse {
  repeated GetUserResponse items = 1;
  int32 total_count = 2;
}

service UserService {
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc GetUserById(GetDetailUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
